--- a/index.html
+++ b/index.html
@@ -6,8 +6,40 @@
 </head>
 <body>
     <div class='calculator'>
-        <title class='title'>CALCULATOR</title>
-        <
+        <p>CALCULATOR</p>
+        <input type="text" disabled="disabled" id="answer"/>
+        <!--1st ROW-->
+        <div class="row" > 
+            <button class="ctrl">AC</button>
+            <button class="ctrl">CE</button>
+            <button class="ctrl">%</button>
+            <button class="ctrl">/</button>
+        </div>
+        <!--2nd ROW -->
+        <div class="row">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>x</button>
+        </div>
+        <!--3rd ROW-->
+        <div class="row">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>-</button>
+        </div>
+        <div class="row">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button class="tall">+</button>
+        </div>
+        <div class="row">
+            <button>0</button>
+            <button>.</button>
+            <button class='ctrl'>=</button>
+        </div>
     </div>
 </body>
 </html>
