--- a/index.html
+++ b/index.html
@@ -3,44 +3,46 @@
 <head>
     <title>Calculator</title>
     <link href="index.css" rel="stylesheet" type="text/css" />
-    <script src='calculator.js'></script>
+    
 </head>
 <body>
     <div class='calculator'>
         <p>CALCULATOR</p>
-        <input id="display" value="0" type="text">
+
+        <input id="screen" value="0" type="text" disabled/>
+
         <!--1st ROW-->
         <div class="row" > 
-            <button class="ctrl">AC</button>
-            <button class="ctrl">CE</button>
-            <button class="ctrl">%</button>
-            <button class="ctrl">/</button>
+            <button value="AC">AC</button>
+            <button value="CE">CE</button>
+            <button value="/">/</button>
         </div>
         <!--2nd ROW -->
         <div class="row">
             <button value="7">7</button>
             <button value="8">8</button>
             <button value="9">9</button>
-            <button class="operator">x</button>
+            <button value="*">*</button>
         </div>
         <!--3rd ROW-->
         <div class="row">
             <button value="4">4</button>
             <button value="5">5</button>
             <button value="6">6</button>
-            <button class="operator">-</button>
+            <button value="-">-</button>
         </div>
         <div class="row">
             <button value="1">1</button>
             <button value="2">2</button>
             <button value="3">3</button>
-            <button class="tall" class="operator">+</button>
+            <button class="tall" value="+">+</button>
         </div>
         <div class="row">
             <button value="0">0</button>
             <button value=".">.</button>
-            <button class='ctrl'>=</button>
+            <button value="equal">=</button>
         </div>
     </div>
+    <script src='calculator.js'></script>
 </body>
 </html>
